--- a/PegasusPlus/Views/Shared/_LayoutMin.cshtml
+++ b/PegasusPlus/Views/Shared/_LayoutMin.cshtml
@@ -9,6 +9,7 @@
 	<link href="https://kendo.cdn.telerik.com/2016.1.112/styles/kendo.bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" type="text/css" />
 	<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Scripts/messagebox/messagebox.css")" rel="stylesheet" type="text/css" />
 
     <link rel="icon" href="@Url.Content("~/content/favicon.ico")" />
 
@@ -18,6 +19,8 @@
 	<script src="https://kendo.cdn.telerik.com/2016.1.112/js/kendo.aspnetmvc.min.js"></script>
 	<script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
 	<script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
+    <script src="@Url.Content("~/Scripts/messagebox/messagebox.js")"></script>
+    <script src="@Url.Content("~/Scripts/custom/jspCustom.js")"></script>
 
     <!-- Clock scripts -->
     <script src="@Url.Content("~/Clock/coolclock.js")"></script>
