--- a/PegasusPlus/Views/Shared/_Notifications.cshtml
+++ b/PegasusPlus/Views/Shared/_Notifications.cshtml
@@ -63,7 +63,7 @@
             </ul>
         }
         else{
-            <strong><i class="fa fa-check" aria-hidden="true"></i> Επιτυχία! </strong>
+            <strong><i class="fa fa-check" aria-hidden="true"></i> Επιτυχία. </strong>
             @Html.Raw(successList.First())
         }
     </div>
