--- a/PegasusPlus/Views/Teachers/TeacherUploads.cshtml
+++ b/PegasusPlus/Views/Teachers/TeacherUploads.cshtml
@@ -71,9 +71,9 @@
 <div id="dialog" style="display: none">
 </div>
 
-@*<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
-<link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />*@
+@*<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>*@
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.11.4/jquery-ui.js" type="text/javascript"></script>
+<link href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.12.1/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />
 
 <script type="text/javascript">
 
@@ -104,26 +104,26 @@
         var data = this.dataItem(row);
         alert("Path, filename = " + data.FilePath + "\n" + data.FileName);
 
-        //fileName = data.FileName;
-        //$("#dialog").dialog({
-        //    modal: true,
-        //    title: fileName,
-        //    width: 800,
-        //    height: 600,
-        //    buttons: {
-        //        Κλείσιμο: function () {
-        //            $(this).dialog('close');
-        //        }
-        //    },
-        //    open: function () {
-        //        var object = "<object data=\"{FileName}\" type=\"application/pdf\" width=\"800px\" height=\"600px\">";
-        //        object += "If you are unable to view file, you can download from <a href=\"{FileName}\">here</a>";
-        //        object += " or download <a target = \"_blank\" href = \"http://get.adobe.com/reader/\">Adobe PDF Reader</a> to view the file.";
-        //        object += "</object>";
-        //        object = object.replace(/{FileName}/g, data.FilePath);
-        //        $("#dialog").html(object);
-        //    }
-        //});
+        fileName = data.FileName;
+        $("#dialog").dialog({
+            modal: true,
+            title: fileName,
+            width: 800,
+            height: 600,
+            buttons: {
+                Κλείσιμο: function () {
+                    $(this).dialog('close');
+                }
+            },
+            open: function () {
+                var object = "<object data=\"{FileName}\" type=\"application/pdf\" width=\"800px\" height=\"600px\">";
+                object += "If you are unable to view file, you can download from <a href=\"{FileName}\">here</a>";
+                object += " or download <a target = \"_blank\" href = \"http://get.adobe.com/reader/\">Adobe PDF Reader</a> to view the file.";
+                object += "</object>";
+                object = object.replace(/{FileName}/g, data.FilePath);
+                $("#dialog").html(object);
+            }
+        });
 
     }
 
