--- a/PegasusPlus/Views/Aitisis/AitisiCreate.cshtml
+++ b/PegasusPlus/Views/Aitisis/AitisiCreate.cshtml
@@ -284,7 +284,7 @@
                             </div>
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxio, new { @class = "col-form-label col-md-10" })
-                                <input type='file' id="FilePtyxio" name="FilePtyxio" onchange="pressed1()" style="display:none;">
+                                <input type='file' id="FilePtyxio" name="FilePtyxio" onchange="pressed1()" style="display:none;" accept=".pdf">
                                 <label class="btn btn-outline-dark" for="FilePtyxio" id="fileLabelPtyxio" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxioAnagnorisi, new { @class = "col-form-label col-md-10" })
-                                <input type='file' id="FilePtyxioAnagnorisi" name="FilePtyxioAnagnorisi" onchange="pressed2()" style="display:none;">
+                                <input type='file' id="FilePtyxioAnagnorisi" name="FilePtyxioAnagnorisi" onchange="pressed2()" style="display:none;" accept=".pdf">
                                 <label class="btn btn-outline-dark" for="FilePtyxioAnagnorisi" id="fileLabelPtyxioAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
@@ -382,7 +382,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMsc, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileMsc" name="FileMsc" onchange="pressed3()" style="display:none;">
+                            <input type='file' id="FileMsc" name="FileMsc" onchange="pressed3()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileMsc" id="fileLabelMsc" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -401,7 +401,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMscAnagnorisi, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileMscAnagnorisi" name="FileMscAnagnorisi" onchange="pressed4()" style="display:none;">
+                            <input type='file' id="FileMscAnagnorisi" name="FileMscAnagnorisi" onchange="pressed4()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileMscAnagnorisi" id="fileLabelMscAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -480,7 +480,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhd, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePhd" name="FilePhd" onchange="pressed5()" style="display:none;">
+                            <input type='file' id="FilePhd" name="FilePhd" onchange="pressed5()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePhd" id="fileLabelPhd" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -499,7 +499,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhdAnagnorisi, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePhdAnagnorisi" name="FilePhdAnagnorisi" onchange="pressed6()" style="display:none;">
+                            <input type='file' id="FilePhdAnagnorisi" name="FilePhdAnagnorisi" onchange="pressed6()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePhdAnagnorisi" id="fileLabelPhdAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
