--- a/PegasusPlus/Views/Home/Index.cshtml
+++ b/PegasusPlus/Views/Home/Index.cshtml
@@ -318,6 +318,10 @@
                         <li>
                             Λόγω χωροταξικών απαιτήσεων της εφαρμογής συνιστάται η χρήση της από υπολογιστή, με οθόνη υψηλής ανάλυσης, και όχι από κινητό. 
                         </li>
+                        <li>
+                            Τα σκαναρισμένα δικαιολογητικά που ανεβάζετε πρέπει απαραίτητα να είναι σε μορφή αρχείων PDF και το μέγεθος του κάθε αρχείου
+                            δεν πρέπει να υπερβαίνει τα 900 ΚΒ.
+                        </li>
                     </ul>
                 </p>
             </div>
