--- a/PegasusPlus/Views/Teachers/SkillsCreate.cshtml
+++ b/PegasusPlus/Views/Teachers/SkillsCreate.cshtml
@@ -187,7 +187,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePtyxio2, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePtyxio2" name="FilePtyxio2" onchange="pressed1()" style="display:none;">
+                            <input type='file' id="FilePtyxio2" name="FilePtyxio2" onchange="pressed1()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePtyxio2" id="fileLabelPtyxio2" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -206,7 +206,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAnagnorisi, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAnagnorisi" name="FileAnagnorisi" onchange="pressed2()" style="display:none;">
+                            <input type='file' id="FileAnagnorisi" name="FileAnagnorisi" onchange="pressed2()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAnagnorisi" id="fileLabelAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -277,7 +277,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileLanguage1, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileLanguage1" name="FileLanguage1" onchange="pressed3()" style="display:none;">
+                            <input type='file' id="FileLanguage1" name="FileLanguage1" onchange="pressed3()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileLanguage1" id="fileLabelLanguage1" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileLanguage2, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileLanguage2" name="FileLanguage2" onchange="pressed4()" style="display:none;">
+                            <input type='file' id="FileLanguage2" name="FileLanguage2" onchange="pressed4()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileLanguage2" id="fileLabelLanguage2" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -407,7 +407,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileComputer, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileComputer" name="FileComputer" onchange="pressed5()" style="display:none;">
+                            <input type='file' id="FileComputer" name="FileComputer" onchange="pressed5()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileComputer" id="fileLabelComputer" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -463,7 +463,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileCertified, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileCertified" name="FileCertified" onchange="pressed6()" style="display:none;">
+                            <input type='file' id="FileCertified" name="FileCertified" onchange="pressed6()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileCertified" id="fileLabelCertified" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -487,7 +487,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileN2190, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileN2190" name="FileN2190" onchange="pressed7()" style="display:none;">
+                            <input type='file' id="FileN2190" name="FileN2190" onchange="pressed7()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileN2190" id="fileLabelN2190" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
