--- a/PegasusPlus/Views/Aitisis/AitisiEdit2.cshtml
+++ b/PegasusPlus/Views/Aitisis/AitisiEdit2.cshtml
@@ -286,7 +286,7 @@
                             </div>
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxio, new { @class = "col-form-label col-md-10" })
-                                <input type='file' id="FilePtyxio" name="FilePtyxio" onchange="pressed1()" style="display:none;">
+                                <input type='file' id="FilePtyxio" name="FilePtyxio" onchange="pressed1()" style="display:none;" accept=".pdf">
                                 <label class="btn btn-outline-dark" for="FilePtyxio" id="fileLabelPtyxio" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
@@ -305,7 +305,7 @@
                             </div>
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxioAnagnorisi, new { @class = "col-form-label col-md-10" })
-                                <input type='file' id="FilePtyxioAnagnorisi" name="FilePtyxioAnagnorisi" onchange="pressed2()" style="display:none;">
+                                <input type='file' id="FilePtyxioAnagnorisi" name="FilePtyxioAnagnorisi" onchange="pressed2()" style="display:none;" accept=".pdf">
                                 <label class="btn btn-outline-dark" for="FilePtyxioAnagnorisi" id="fileLabelPtyxioAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
@@ -384,7 +384,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMsc, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileMsc" name="FileMsc" onchange="pressed3()" style="display:none;">
+                            <input type='file' id="FileMsc" name="FileMsc" onchange="pressed3()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileMsc" id="fileLabelMsc" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -403,7 +403,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMscAnagnorisi, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileMscAnagnorisi" name="FileMscAnagnorisi" onchange="pressed4()" style="display:none;">
+                            <input type='file' id="FileMscAnagnorisi" name="FileMscAnagnorisi" onchange="pressed4()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileMscAnagnorisi" id="fileLabelMscAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -482,7 +482,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhd, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePhd" name="FilePhd" onchange="pressed5()" style="display:none;">
+                            <input type='file' id="FilePhd" name="FilePhd" onchange="pressed5()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePhd" id="fileLabelPhd" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -501,7 +501,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhdAnagnorisi, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePhdAnagnorisi" name="FilePhdAnagnorisi" onchange="pressed6()" style="display:none;">
+                            <input type='file' id="FilePhdAnagnorisi" name="FilePhdAnagnorisi" onchange="pressed6()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePhdAnagnorisi" id="fileLabelPhdAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
