--- a/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
+++ b/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
@@ -265,7 +265,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileADT, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileADT" name="FileADT" onchange="pressedAdt()" style="display:none;">
+                            <input type='file' id="FileADT" name="FileADT" onchange="pressedAdt()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileADT" id="fileLabelADT" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -286,7 +286,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAFM, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAFM" name="FileAFM" onchange="pressedAfm()" style="display:none;">
+                            <input type='file' id="FileAFM" name="FileAFM" onchange="pressedAfm()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAFM" id="fileLabelAFM" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -308,7 +308,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAMKA, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAMKA" name="FileAMKA" onchange="pressedAmka()" style="display:none;">
+                            <input type='file' id="FileAMKA" name="FileAMKA" onchange="pressedAmka()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAMKA" id="fileLabelAMKA" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -330,7 +330,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAMA, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAMA" name="FileAMA" onchange="pressedAma()" style="display:none;">
+                            <input type='file' id="FileAMA" name="FileAMA" onchange="pressedAma()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAMA" id="fileLabelAMA" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -353,7 +353,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.Idiotita, new { @class = "col-form-label col-md-6" })
-                            @(Html.Kendo().DropDownListFor(model => model.Idiotita, "", new { @class = "text-danger" })
+                            @(Html.Kendo().DropDownListFor(model => model.Idiotita)
                                 .Name("Idiotita")
                                 .DataTextField("IdiotitaText")
                                 .DataValueField("IdiotitaID")
@@ -391,7 +391,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileTriteknos, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileTriteknos" name="FileTriteknos" onchange="pressedTriteknos()" style="display:none;">
+                            <input type='file' id="FileTriteknos" name="FileTriteknos" onchange="pressedTriteknos()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileTriteknos" id="fileLabelTriteknos" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -415,7 +415,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePolyteknos, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FilePolyteknos" name="FilePolyteknos" onchange="pressedPolyteknos()" style="display:none;">
+                            <input type='file' id="FilePolyteknos" name="FilePolyteknos" onchange="pressedPolyteknos()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FilePolyteknos" id="fileLabelPolyteknos" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -439,7 +439,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileSingleParent, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileSingleParent" name="FileSingleParent" onchange="pressedSingleParent()" style="display:none;">
+                            <input type='file' id="FileSingleParent" name="FileSingleParent" onchange="pressedSingleParent()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileSingleParent" id="fileLabelSingleParent" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -463,7 +463,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAMEA, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAMEA" name="FileAMEA" onchange="pressedAmea()" style="display:none;">
+                            <input type='file' id="FileAMEA" name="FileAMEA" onchange="pressedAmea()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAMEA" id="fileLabelAmea" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
@@ -502,7 +502,7 @@
                         </div>
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileAnergia, new { @class = "col-form-label col-md-10" })
-                            <input type='file' id="FileAnergia" name="FileAnergia" onchange="pressedAnergia()" style="display:none;">
+                            <input type='file' id="FileAnergia" name="FileAnergia" onchange="pressedAnergia()" style="display:none;" accept=".pdf">
                             <label class="btn btn-outline-dark" for="FileAnergia" id="fileLabelAnergia" style="cursor:pointer" title="Ανέβασμα αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
