--- a/PegasusPlus/Views/Aitisis/AitisiCreate.cshtml
+++ b/PegasusPlus/Views/Aitisis/AitisiCreate.cshtml
@@ -285,7 +285,7 @@
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxio, new { @class = "col-form-label col-md-10" })
                                 <input type='file' id="FilePtyxio" name="FilePtyxio" onchange="pressed1()" style="display:none;" accept=".pdf">
-                                <label class="btn btn-outline-dark" for="FilePtyxio" id="fileLabelPtyxio" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                                <label class="btn btn-outline-dark" for="FilePtyxio" id="fileLabelPtyxio" style="cursor:pointer" title="Επιλογή αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
                                 <label id="filenamePtyxio" style="font-size:12px"></label>
@@ -304,7 +304,7 @@
                             <div class="col-md-3">
                                 @Html.LabelFor(model => model.FilePtyxioAnagnorisi, new { @class = "col-form-label col-md-10" })
                                 <input type='file' id="FilePtyxioAnagnorisi" name="FilePtyxioAnagnorisi" onchange="pressed2()" style="display:none;" accept=".pdf">
-                                <label class="btn btn-outline-dark" for="FilePtyxioAnagnorisi" id="fileLabelPtyxioAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                                <label class="btn btn-outline-dark" for="FilePtyxioAnagnorisi" id="fileLabelPtyxioAnagnorisi" style="cursor:pointer" title="Επιλογή αρχείου">
                                     <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                                 </label>
                                 <label id="filenamePtyxioAnagnorisi" style="font-size:12px"></label>
@@ -383,7 +383,7 @@
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMsc, new { @class = "col-form-label col-md-10" })
                             <input type='file' id="FileMsc" name="FileMsc" onchange="pressed3()" style="display:none;" accept=".pdf">
-                            <label class="btn btn-outline-dark" for="FileMsc" id="fileLabelMsc" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                            <label class="btn btn-outline-dark" for="FileMsc" id="fileLabelMsc" style="cursor:pointer" title="Επιλογή αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
                             <label id="filenameMsc" style="font-size:12px"></label>
@@ -402,7 +402,7 @@
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FileMscAnagnorisi, new { @class = "col-form-label col-md-10" })
                             <input type='file' id="FileMscAnagnorisi" name="FileMscAnagnorisi" onchange="pressed4()" style="display:none;" accept=".pdf">
-                            <label class="btn btn-outline-dark" for="FileMscAnagnorisi" id="fileLabelMscAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                            <label class="btn btn-outline-dark" for="FileMscAnagnorisi" id="fileLabelMscAnagnorisi" style="cursor:pointer" title="Επιλογή αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
                             <label id="filenameMscAnagnorisi" style="font-size:12px"></label>
@@ -481,7 +481,7 @@
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhd, new { @class = "col-form-label col-md-10" })
                             <input type='file' id="FilePhd" name="FilePhd" onchange="pressed5()" style="display:none;" accept=".pdf">
-                            <label class="btn btn-outline-dark" for="FilePhd" id="fileLabelPhd" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                            <label class="btn btn-outline-dark" for="FilePhd" id="fileLabelPhd" style="cursor:pointer" title="Επιλογή αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
                             <label id="filenamePhd" style="font-size:12px"></label>
@@ -500,7 +500,7 @@
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.FilePhdAnagnorisi, new { @class = "col-form-label col-md-10" })
                             <input type='file' id="FilePhdAnagnorisi" name="FilePhdAnagnorisi" onchange="pressed6()" style="display:none;" accept=".pdf">
-                            <label class="btn btn-outline-dark" for="FilePhdAnagnorisi" id="fileLabelPhdAnagnorisi" style="cursor:pointer" title="Ανέβασμα αρχείου">
+                            <label class="btn btn-outline-dark" for="FilePhdAnagnorisi" id="fileLabelPhdAnagnorisi" style="cursor:pointer" title="Επιλογή αρχείου">
                                 <i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>
                             </label>
                             <label id="filenamePhdAnagnorisi" style="font-size:12px"></label>
