Update (2021-05-19) with reports

--- a/PegasusPlus/Views/Admin/AitiseisRegistry.cshtml
+++ b/PegasusPlus/Views/Admin/AitiseisRegistry.cshtml
@@ -173,7 +173,7 @@
                 {
                     model.Id(p => p.ExperienceID);
                 })
-                .Read(read => read.Action("Vocation_Read", "Experience").Data("data"))
+                .Read(read => read.Action("Vocation_Read", "Admin").Data("data"))
                 )
                 )
             </div>
