--- a/PegasusPlus/Views/Shared/_AdminLayout.cshtml
+++ b/PegasusPlus/Views/Shared/_AdminLayout.cshtml
@@ -132,9 +132,9 @@
                 {
                     children.Add().Text("Έλεγχος αιτήσεων").ImageUrl(Url.Content("~/Images/phone/appbar.card1.png")).Action("AitiseisAudit", "Admin");
                     children.Add().Text("Μοριοδότηση αιτήσεων").ImageUrl(Url.Content("~/Images/phone/appbar.card3.png")).Action("AitiseisMoria", "Admin");
-                    children.Add().Text("Πολλαπλές Αιτήσεις").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("MultipleAitiseis", "Admin").LinkHtmlAttributes(new { target = "_blank" });
+                    children.Add().Text("Πολλαπλές Αιτήσεις").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("MultipleAitiseisPrint", "Admin").LinkHtmlAttributes(new { target = "_blank" });
                     children.Add().Text("Ενστάσεις (ανάρτηση)").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("EnstaseisDetailPost", "Admin").LinkHtmlAttributes(new { target = "_blank" });
-                    children.Add().Text("Ενστάσεις (αναλυτικά)").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("EnstaseisDetail", "Admin").LinkHtmlAttributes(new { target = "_blank" });
+                    children.Add().Text("Ενστάσεις (αναλυτικά)").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("EnstaseisDetailPrint", "Admin").LinkHtmlAttributes(new { target = "_blank" });
                     children.Add().Text("Ενστάσεις (συνοπτικά)").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("EnstaseisSummary", "Admin").LinkHtmlAttributes(new { target = "_blank" });
                 });
                 items.Add().Text("Πίνακες ανάρτησης").ImageUrl(Url.Content("~/Images/phone/appbar.layer.thick.png")).LinkHtmlAttributes(new { title = "Πίνακες χωρίς ονόματα για ανάρτηση" })
