--- a/PegasusPlus/Views/Teachers/Index.cshtml
+++ b/PegasusPlus/Views/Teachers/Index.cshtml
@@ -67,90 +67,96 @@
                 </div>
             </text>);
         items.Add()
-            .Text("ΟΔΗΓΙΕΣ 2 - ΥΠΟΒΟΛΗ ΑΙΤΗΣΕΩΝ")
+            .Text("ΟΔΗΓΙΕΣ 2 - ΛΟΙΠΑ ΣΤΟΙΧΕΙΑ & ΕΠΙΜΟΡΦΩΣΕΙΣ")
             .Content(@<text>
                 <div class="body-content ml-4 mr-4" style="margin-left:40px;margin-right:40px">
                     <p class="sansserif"></p>
                     <p class="sansserif" style="font-size:medium">
                         <span>
                             <font style="font-family:'Segoe UI';font-size:large">
-                                Η υποβολή νέας αίτησης περιλαμβάνει τη συμπλήρωση στοιχείων σε τέσσερις ενότητες:
+                                Η συμπλήρωση στοιχείων περιλαμβάνει τις παρακάτω τέσσερις ενότητες:
                             </font>
                         </span>
                         <br />
                     </p>
                     <p class="sansserif">
                         <img src="~/Images/metro/orderedList1.png" />
-                        Με την επιλογή αυτή δημιουργούμε κάθε φορά μια νέα αίτηση σε περίπτωση που υποβάλετε περισσότερες από μια
-                        αιτήσεις. Στην 4η ενότητα συμπληρώνετε τον κλάδο και την ειδικότητα για την οποία κάνετε αίτηση. Στη συνέχεια
-                        καταχωρείτε τα στοιχεία του βασικού πτυχίου σας και ανεβάζετε τα απαραίτητα πιστοποιητικά για τα αντίστοιχα πεδία.
+                        ΔΕΥΤΕΡΟ ΠΤΥΧΙΟ - Εδώ καταχωρείται η κτήση δεύτερου πτυχίου εκτός αυτών που υποβάλλονται στις αιτήσεις. Το πτυχίο αυτό μπορεί να είναι
+                        βασικό πτυχίο, μεταπτυχιακό ή διδακτορικό. Καταχωρείτε όλα τα απαραίτητα πεδία και ανεβάζετε τα αντίστοιχα δικαιολογητικά.
                     </p>
                     <p class="sansserif">
                         <img src="~/Images/metro/orderedList2.png" />
-                        Στην 5η ενότητα καταχωρείτε τα στοιχεία του μεταπτυχιακού σας εάν επιθυμείτε να το υποβάλετε. Και εδώ ανεβάζετε, σε
-                        όποια πεδία ζητούνται τα αντίστοιχα δικαιολογητικά. Η συνάφεια πρέπει να συμπληρωθεί, αλλιώς δεν θα μοριοδοτηθεί ο τίτλος σπουδών.
+                        ΞΕΝΕΣ ΓΛΩΣΣΕΣ - Στην εντότητα αυτή επιλέγετε μέχρι δύο ξένες γλώσσες και συμπληρώνετε τα αντίστοιχα πεδία της φόρμας. Τέλος ανεβάζετε
+                        τα απαραίτητα πιστοποιητικά.
                     </p>
                     <p class="sansserif">
                         <img src="~/Images/metro/orderedList3.png" />
-                        Στην 6η ενότητα καταχωρείτε τα στοιχεία του διδακτορικού σας και, όπως παραπάνω, ανεβάζετε τα κατάλληλα σκαναρισμένα
-                        διακιολογητικά που ζητούνται. Η συνάφεια πρέπει να συμπληρωθεί, αλλιώς δεν θα μοριοδοτηθεί ο τίτλος σπουδών.
+                        ΓΝΩΣΗ Η/Υ - Εάν διαθέτετε πιστοποιητικό γνώσης  Η/Υ, το επιλέγετε από τη λίστα, ή εάν δεν είναι στη λίστα επιλέγετε "ΆΛλο Πιστοποιητικό"
+                        και καταχωρείτε τον αντίστοιχο τίτλο καθώς και το έτος απόκτησης του πιστοποιητικού. Στη συνέχεια ανεβάζετε το αντίστοιχο έγγραφο.
                     </p>
                     <p class="sansserif">
                         <img src="~/Images/metro/orderedList4.png" />
-                        Στην 7η ενότητα επιλέγετε την επαγγελματική σας ιδιότητα (ιδιώτης ή δημόσιος υπάλληλος/συνταξιούχος) και στη συνέχεια επιλέγετε
-                        την Περιφέρεια και σχολική Μονάδα στην οποία κάνετε την αίτηση.
+                        ΛΟΙΠΑ ΠΡΟΣΟΝΤΑ - Στην ενότητα αυτή καταχωρείτε το σύνολο ωρών επιμόρφωσης, εάν υπάρχει. Επιπλέον, εάν έχετε πιστοποίηση εκπαιδευτή ενηλίκων
+                        τσεκάρετε το αντίστοιχο πεδίο και καταχωρείτε τον αριθμό μητρώου του ΕΟΠΠΕΠ. Παρομοίως, τσεκάρετε το πεδίο "Προστατευόμενος του Ν.2190", εάν
+                        ισχύσει για εσάς. Τέλος ανεβάζετε τα αντίστοιχα δικαιολογητικά.
                     </p>
                     <p class="sansserif">
                         <img src="~/Images/metro/orderedList5.png" />
-                        Με την ολοκλήρωση των καταχωρήσεων πατάτε 'Αποθήκευση', στο πάνω μέρος της σελίδας για υποβολή των στοιχείων και μεταφόρτωση
-                        των δικαιλογητικών στον εξυπηρετητή.
+                        ΠΙΝΑΚΑΣ ΕΠΙΜΟΡΦΩΣΕΩΝ - Εάν υπάρχουν επιμορφώσεις κάνετε κλικ στο κουμπί 'Επιμορφώσεις", στο άνω μέρος της σελίδας και στον πίνακα που εμφανίζεται
+                        καταχωρείτε την κάθε μία με τις αντίστοιχες ώρες. Τέλος για κάθε επιμόρφωση πρέπει να ανεβάσετε και το αντίτοιχο δικαιολογητικό με το κουμπί "Ανέβασμα"
+                        που υπάρχει στο δεξιό άκρο της κάθε γραμμής του πίνακα.
                     </p>
                     <p />
                 </div>
             </text>);
         items.Add()
-            .Text("ΟΔΗΓΙΕΣ 3 - ΛΟΙΠΑ ΣΤΟΙΧΕΙΑ & ΕΠΙΜΟΡΦΩΣΕΙΣ")
-            .Content(@<text>
+        .Text("ΟΔΗΓΙΕΣ 3 - ΥΠΟΒΟΛΗ ΑΙΤΗΣΕΩΝ")
+        .Content(@<text>
             <div class="body-content ml-4 mr-4" style="margin-left:40px;margin-right:40px">
                 <p class="sansserif"></p>
                 <p class="sansserif" style="font-size:medium">
                     <span>
                         <font style="font-family:'Segoe UI';font-size:large">
-                            Η συμπλήρωση στοιχείων περιλαμβάνει τις παρακάτω τέσσερις ενότητες:
+                            Η υποβολή νέας αίτησης περιλαμβάνει τη συμπλήρωση στοιχείων σε τέσσερις ενότητες:
                         </font>
                     </span>
                     <br />
                 </p>
                 <p class="sansserif">
                     <img src="~/Images/metro/orderedList1.png" />
-                    ΔΕΥΤΕΡΟ ΠΤΥΧΙΟ - Εδώ καταχωρείται η κτήση δεύτερου πτυχίου εκτός αυτών που υποβάλλονται στις αιτήσεις. Το πτυχίο αυτό μπορεί να είναι
-                    βασικό πτυχίο, μεταπτυχιακό ή διδακτορικό. Καταχωρείτε όλα τα απαραίτητα πεδία και ανεβάζετε τα αντίστοιχα δικαιολογητικά.
+                    Με την επιλογή αυτή δημιουργούμε κάθε φορά μία <b>νέα αίτηση</b> σε περίπτωση που υποβάλετε περισσότερες από μια
+                    αιτήσεις. Στην 4η ενότητα συμπληρώνετε τον κλάδο και την ειδικότητα για την οποία κάνετε αίτηση. Στη συνέχεια
+                    καταχωρείτε τα στοιχεία του βασικού πτυχίου σας και ανεβάζετε τα απαραίτητα πιστοποιητικά για τα αντίστοιχα πεδία.
                 </p>
                 <p class="sansserif">
                     <img src="~/Images/metro/orderedList2.png" />
-                    ΞΕΝΕΣ ΓΛΩΣΣΕΣ - Στην εντότητα αυτή επιλέγετε μέχρι δύο ξένες γλώσσες και συμπληρώνετε τα αντίστοιχα πεδία της φόρμας. Τέλος ανεβάζετε
-                    τα απαραίτητα πιστοποιητικά.
+                    Στην 5η ενότητα καταχωρείτε τα στοιχεία του μεταπτυχιακού σας εάν επιθυμείτε να το υποβάλετε. Και εδώ ανεβάζετε, σε
+                    όποια πεδία ζητούνται τα αντίστοιχα δικαιολογητικά. Η συνάφεια πρέπει να συμπληρωθεί, αλλιώς δεν θα μοριοδοτηθεί ο τίτλος σπουδών.
                 </p>
                 <p class="sansserif">
                     <img src="~/Images/metro/orderedList3.png" />
-                    ΓΝΩΣΗ Η/Υ - Εάν διαθέτετε πιστοποιητικό γνώσης  Η/Υ, το επιλέγετε από τη λίστα, ή εάν δεν είναι στη λίστα επιλέγετε "ΆΛλο Πιστοποιητικό"
-                    και καταχωρείτε τον αντίστοιχο τίτλο καθώς και το έτος απόκτησης του πιστοποιητικού. Στη συνέχεια ανεβάζετε το αντίστοιχο έγγραφο.
+                    Στην 6η ενότητα καταχωρείτε τα στοιχεία του διδακτορικού σας και, όπως παραπάνω, ανεβάζετε τα κατάλληλα σκαναρισμένα
+                    διακιολογητικά που ζητούνται. Η συνάφεια πρέπει να συμπληρωθεί, αλλιώς δεν θα μοριοδοτηθεί ο τίτλος σπουδών.
                 </p>
                 <p class="sansserif">
                     <img src="~/Images/metro/orderedList4.png" />
-                    ΛΟΙΠΑ ΠΡΟΣΟΝΤΑ - Στην ενότητα αυτή καταχωρείτε το σύνολο ωρών επιμόρφωσης, εάν υπάρχει. Επιπλέον, εάν έχετε πιστοποίηση εκπαιδευτή ενηλίκων
-                    τσεκάρετε το αντίστοιχο πεδίο και καταχωρείτε τον αριθμό μητρώου του ΕΟΠΠΕΠ. Παρομοίως, τσεκάρετε το πεδίο "Προστατευόμενος του Ν.2190", εάν
-                    ισχύσει για εσάς. Τέλος ανεβάζετε τα αντίστοιχα δικαιολογητικά.
+                    Στην 7η ενότητα επιλέγετε την επαγγελματική σας ιδιότητα (ιδιώτης ή δημόσιος υπάλληλος/συνταξιούχος) και στη συνέχεια επιλέγετε
+                    την Περιφέρεια και σχολική Μονάδα στην οποία κάνετε την αίτηση.
                 </p>
                 <p class="sansserif">
                     <img src="~/Images/metro/orderedList5.png" />
-                    ΠΙΝΑΚΑΣ ΕΠΙΜΟΡΦΩΣΕΩΝ - Εάν υπάρχουν επιμορφώσεις κάνετε κλικ στο κουμπί 'Επιμορφώσεις", στο άνω μέρος της σελίδας και στον πίνακα που εμφανίζεται
-                    καταχωρείτε την κάθε μία με τις αντίστοιχες ώρες. Τέλος για κάθε επιμόρφωση πρέπει να ανεβάσετε και το αντίτοιχο δικαιολογητικό με το κουμπί "Ανέβασμα"
-                    που υπάρχει στο δεξιό άκρο της κάθε γραμμής του πίνακα.
+                    Με την ολοκλήρωση των καταχωρήσεων πατάτε 'Αποθήκευση', στο πάνω μέρος της σελίδας για υποβολή των στοιχείων και μεταφόρτωση
+                    των δικαιλογητικών στον εξυπηρετητή.
+                </p>
+                <p class="sansserif">
+                    <img src="~/Images/metro/orderedList6.png" />
+                    ΔΙΑΧΕΙΡΙΣΗ ΑΙΤΗΣΕΩΝ - Με την επιλογή αυτή μπορείτε να <b>επεξεργαστείτε</b> τις αιτήσεις που υποβάλατε καθώς και να επιλέξετε τις
+                    <b>σχολικές μονάδες προτίμησης</b>. Πρώτα επιλέγετε μια αίτηση στο επάνω πλέγμα και μετά στο κάτω πλέγμα πατάτε "Νέα Εγγραφή" και
+                    επιλέγετε τη σχολική μονάδα από το πλαίσιο λίστας.
                 </p>
                 <p />
             </div>
-            </text>);
+        </text>);
         items.Add()
             .Text("ΟΔΗΓΙΕΣ 4 - ΣΤΟΙΧΕΙΑ ΠΡΟΫΠΗΡΕΣΙΩΝ")
             .Content(@<text>
