--- a/PegasusPlus/Views/Shared/_AdminLayout.cshtml
+++ b/PegasusPlus/Views/Shared/_AdminLayout.cshtml
@@ -186,7 +186,18 @@
                     Children.Add().Text("Μητρώο αιτήσεων - Εκτύπωση").ImageUrl(Url.Content("~/Images/phone/appbar.printer.text.png")).Action("AitiseisRegistryPrint", "Admin")
                         .LinkHtmlAttributes(new { target = "_blank" });
                 });
-                items.Add().Text("Στατιστικά").ImageUrl(Url.Content("~/Images/phone/appbar.greek.sigma.lowercase.png"));
+                items.Add().Text("Στατιστικά").ImageUrl(Url.Content("~/Images/phone/appbar.greek.sigma.lowercase.png"))
+                .Items(Children =>
+                {
+                    Children.Add().Text("Κατανομή ανά φύλο").ImageUrl(Url.Content("~/Images/phone/appbar.graph.bar.png")).Action("statGendersPrint", "Admin")
+                        .LinkHtmlAttributes(new { target = "_blank" });
+                    Children.Add().Text("Κατανομή ανεργίας").ImageUrl(Url.Content("~/Images/phone/appbar.graph.bar.png")).Action("statAnergiaPrint", "Admin")
+                        .LinkHtmlAttributes(new { target = "_blank" });
+                    Children.Add().Text("Κατανομή πιστοποιημένων").ImageUrl(Url.Content("~/Images/phone/appbar.graph.bar.png")).Action("statCertifiedPrint", "Admin")
+                        .LinkHtmlAttributes(new { target = "_blank" });
+                    Children.Add().Text("Κατανομή κοινωνική ομάδα").ImageUrl(Url.Content("~/Images/phone/appbar.graph.bar.png")).Action("statSocialGroupsPrint", "Admin")
+                        .LinkHtmlAttributes(new { target = "_blank" });
+                });
                 items.Add().Text("Προκηρύξεις").ImageUrl(Url.Content("~/Images/phone/appbar.calendar.year.png"))
                 .Items(Children =>
                 {
